--- a/TODO
+++ b/TODO
@@ -5,16 +5,12 @@ TODO: [Version 0.3]
         1. Implement Resilient-Back-Propagation.
            Once complete, rename `train` to `train_backprop` and create a new `train_rprop` method.
            Then, parametrise the `epoch` method to take as param either an ENUM, or a functor to the batch training method.
+           Read the paper (PDF) `Rprop.pdf` and see online bookmarks.
 
-        3. OPTIMIZE: the `trainer` class has serious problems: too many copies and allocations.
-                     What I need is a flat (and more elegant) way of fw_propagating, which is spamming `cudaMemcpy` and `cudaMemaloc`
-                     In order to do this, I need to rethink my `trainer::fw_propagate` seriously.
+           A neat optimisation trick is to not zero-fill `delta_updates` at first, but to set them to 0.1.
 
-                     A CRAZY IDEA, would be to ALLOCATE before-hand ALL Pattern-trainer_data.
-                     In this case, I would allocate as many training patterns ONCE.
-                     Then for each Epoch Iteration, I would re-use the same Pattern-Trainer_Data.
-                     This will use ALOT of Memory, but will avoid constant re-allocations and copying.
-                     It may be feasible with normal training sets, but may become a problem with large ones.
+        2. remove thread_pool: In almost all instances were I use CPU-MT, the GPU uses LESS %.
+           Completely remove the thread_pool, flatten code, remove boost::asio.
 
         3. Average Cross-Entropy Error. This may require changes to back_prop as the update rule slightly changes.
 
